style.css
html {
    background: url(images/paperBackground.jpg);
    height: 100%;
}

body {
    height: 100%;
    font-family: 'Roboto Condensed', sans-serif;
}

div {
    display: flex;
    margin: 10px;
}

.container {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
}

.buttons {
    width: 40%;
    justify-content: center;
}

button {
    width: 20%;
    min-width: 70px;
    margin: 5px;
}

#output-report {
    white-space: pre;
    text-align: center;
}

